--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">C, C++ (certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Used mostly in Competitive Programming">Expert</span></h3>
+                                    <h3 class="level-title">C, C++ <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Used mostly in Competitive Programming">Expert</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="90%">
                                         </div>                                      
@@ -286,7 +286,7 @@
                                 </div><!--//item-->
                                 
                                 <div class="item">
-                                    <h3 class="level-title">PHP - JavaScript (certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Used mostly for Android App Development">Specialist</span></h3>
+                                    <h3 class="level-title">PHP - JavaScript <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Used mostly for Android App Development">Specialist</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>                                      
@@ -294,7 +294,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">C# (Microsoft certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="For Desktop Application Development">Specialist</span></h3>
+                                    <h3 class="level-title">C# <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="For Desktop Application Development">Specialist</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="80%">
                                         </div>                                      
@@ -310,7 +310,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">SQL (certified), MySql, SQLite<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="RDBMS, Data Interchange & NoSql">Workable</span></h3>
+                                    <h3 class="level-title">SQL, MySql, SQLite<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="RDBMS, Data Interchange & NoSql">Workable</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="70%">
                                         </div>                                      
