--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Love to code. Love to play with data. Solved over 2000 problems and continuously solving algorithmic and mathematical problems to enhance programming skill and analytic ability. Have profound knowledge of algorithms and data structures to work on large data. Also, have hands-on experiences in software development, mobile &amp; web application development using different programming languages and frameworks.</p>
+                            <p>Love to code. Love to play with data. Solved over 2000 problems and continuously solving algorithmic and mathematical problems to enhance programming skill and analytic ability. Have profound knowledge of algorithms and data structures to work on large data. Also, have hands-on experiences in software development, mobile &amp; web application development using different programming languages and frameworks. Currently working with Windows API.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
@@ -143,7 +143,7 @@
                                <li> Developing SkyPDF tools SDK using Windows API (a.k.a. Win32).</li>
                                <li> Enhancing features of SkyPDF using existing toolsSDK.</li>                     
                                <li> Developing SkyCom's internal shipping web application using C# MVC.</li>
-                               
+                               <li> Developing PDF following ISO 32000-2:2017 (PDF 2.0)</li>
                               </ul>
                            </p>
                           </div><!--//item-->
