--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
                                 <h3 class="title">Software Engineer - <span class="place"><a href="https://www.skycom.jp/">SKYCOM Corporation</a></span> <span class="year">(July, 2018 - Present)</span></h3>
                            <p>                        
                               <ul>
-                               <li> Developing SkyPDF tools SDK using Windows API (a.k.a. Win32).</li>
+                               <li> Developing SkyPDF tools SDK using Windows API (a.k.a. Win32 api/winapi).</li>
                                <li> Enhancing features of SkyPDF using existing toolsSDK.</li>                     
-                               <li> Developing SkyCom's internal shipping web application using C# MVC.</li>
-                               <li> Developing PDF following ISO 32000-2:2017 (PDF 2.0)</li>
+                               <li> Writing Automated Functional Tests.</li>
+                               <li> Developing PDF by following ISO 32000-2:2017 (PDF 2.0)</li>
                               </ul>
                            </p>
                           </div><!--//item-->
